# auth-rust

./: Cargo.toml  Dockerfile
.github/workflows/: main.yml
src/: auth_oidc.rs  main.rs
