[package]
name = "auth-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-session = { version = "0.11.0", features = ["redis-session"] }
actix-web = { version = "4.11.0", features = ["cookies"] }
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
dashmap = "6.1.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.28"
openidconnect = "4.0.1"
redis = "0.32.7"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync"] }
